--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/elias/img.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Elias Machuanin</title>
 </head>
@@ -49,10 +48,10 @@
 	<div class="container p-2">
 		<section class="main row">
 			<article class="col-md-9 bg-light p-0">
-				<img src="/src/images/portadaPerfilElias.jpg" width="100%" height="150px">
+				<img src="../images/portadaPerfilElias.jpg" width="100%" height="150px">
 				<center>
 					<p></p>
-					<img src="/src/images/eliasMachuanin.jpg" class="img"> 
+					<img src="../images/eliasMachuanin.jpg" class="img"> 
 					<p></p>
 					<h4>
 						Datos Personales
