--- a/index.html
+++ b/index.html
@@ -2,106 +2,113 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>Elias Machuanin</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<title>Elias Machuanin</title>
 </head>
 <body>
-<style>
-        body{
+		
+<div class="container">	&nbsp; 
+	<style>
+			body{
 
-            background-image: url(http://alfonsomartinjimenez.blogs.uva.es/files/2018/10/solid-light-grey-simple-background-767953.jpg);
-        }
+				background-image: url(http://alfonsomartinjimenez.blogs.uva.es/files/2018/10/solid-light-grey-simple-background-767953.jpg);
+			}
 
-		.img{
-			border-radius: 50%;
-		}
-    </style>
-	<header>
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<a class="navbar-brand" href="/src/index.html">Menu CVs</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			  <ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-				<a class="nav-link" href="/src/jose/index.html">Jose <span class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="/src/juanB/index.html">Juan B. <span class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="/src/julian/code/index.html">Julian <span class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="/src/julio//index.html">Julio <span class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="/src/renzo/index.html">Renzo <span class="sr-only">(current)</span></a>
-				</li>
-			  </ul>
+			.img{
+				border-radius: 50%;
+			}
+		</style>
+		<header>
 			
-			</div>
-		  </nav>
-	</header>
-	<div class="container p-2">
-		<section class="main row">
-			<article class="col-md-9 bg-light p-0">
-				<img src="../images/portadaPerfilElias.jpg" width="100%" height="150px">
-				<center>
-					<p></p>
-					<img src="../images/eliasMachuanin.jpg" class="img"> 
-					<p></p>
-					<h4>
-						Datos Personales
+		</header>
+		<div class="container p-2 col-xs col-sm col-md">
+			
+			<section class="main row col-xs col-sm col-md">
+				<section  class="col-xs-12 col-sm-12 col-md-12 bg-light p-0">
+					<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+				<a class="navbar-brand" href="/src/index.html">Menu CVs</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item active">
+					<a class="nav-link" href="/src/jose/index.html">Jose <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="/src/juanB/index.html">Juan B. <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="/src/julian/code/index.html">Julian <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="/src/julio//index.html">Julio <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="/src/renzo/index.html">Renzo <span class="sr-only">(current)</span></a>
+					</li>
+				</ul>
+				
+				</div>
+			</nav>
+				</section>
+				<article class="col-xs-12 col-sm-7.5 col-md-9 bg-light p-0">
+					<img src="../images/portadaPerfilElias.jpg" width="100%" height="150px"  class="col-xs-12 col-sm-12 col-md-12">
+					<center>
+						<p></p>
+						<img src="../images/eliasMachuanin.jpg" class="img col-xs-4 col-sm-7 col-md-7"> 
+						<p></p>
+						<h4>
+							Datos Personales
 
+						</h4>
+						<p>
+							Nombre: Machuanin, Elias Ariel
+						</p>
+						<p>
+							DNI: 37469526
+						</p>
+						<p>
+							Teléfono: 3624-080088
+						</p>
+						<p>
+							Correo Electrónico: eliasmachuanin@gmail.com
+						</p>
+						<p>
+							Residencia: Calle aleatoria 0, Charata, Chaco.
+						</p>
+					</center>
+				</article>
+		
+				<aside class="col-xs-2 col-sm-4.5 col-md-3 col-info bg-info text-white p-3">
+					<p></p>
+					<center>
+						<h4>
+						Añadir Seccion
 					</h4>
+					</center>
+					<p></p>
+					<p></p>
 					<p>
-						Nombre: Machuanin, Elias Ariel
+						Nor is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but occasionally circumstances occur in which toil and pain can procure him some great pleasure.
 					</p>
 					<p>
-						DNI: 37469526
+						Nor is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but occasionally circumstances occur in which toil and pain can procure him some great pleasure.
 					</p>
 					<p>
-						Teléfono: 3624-080088
+						Nor is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but occasionally circumstances occur in which toil and pain can procure him some great pleasure.
 					</p>
 					<p>
-						Correo Electrónico: eliasmachuanin@gmail.com
+						Nor is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but occasionally circumstances occur in which toil and pain can procure him some great pleasure.
 					</p>
-					<p>
-						Residencia: Calle aleatoria 0, Charata, Chaco.
-					</p>
-				</center>
-			</article>
-	
-			<aside class="col-md-3 col-info bg-info text-white p-3">
-				<p></p>
-				<center>
-					<h4>
-					Añadir Seccion
-				</h4>
-				</center>
-				<p></p>
-				<p></p>
-				<p>
-					Nor is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but occasionally circumstances occur in which toil and pain can procure him some great pleasure.
-				</p>
-				<p>
-					Nor is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but occasionally circumstances occur in which toil and pain can procure him some great pleasure.
-				</p>
-				<p>
-					Nor is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but occasionally circumstances occur in which toil and pain can procure him some great pleasure.
-				</p>
-				<p>
-					Nor is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but occasionally circumstances occur in which toil and pain can procure him some great pleasure.
-				</p>
-			</aside>
-		</section>
+				</aside>
+			</section>
+		</div>
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
 
