--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 		
 <div class="container">	&nbsp; 
 	<style>
-			body{
+		body{
 
-				background-image: url(http://alfonsomartinjimenez.blogs.uva.es/files/2018/10/solid-light-grey-simple-background-767953.jpg);
+				background-color: lightgray;
 			}
-
 			.img{
 				border-radius: 50%;
 			}
@@ -67,13 +66,13 @@
 							Nombre: Machuanin, Elias Ariel
 						</p>
 						<p>
-							DNI: 37469526
+							DNI: 325684116
 						</p>
 						<p>
 							Teléfono: 3624-080088
 						</p>
 						<p>
-							Correo Electrónico: eliasmachuanin@gmail.com
+							Correo Electrónico: example@pmail.com
 						</p>
 						<p>
 							Residencia: Calle aleatoria 0, Charata, Chaco.
