--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="CV Machuanin, Elias" />
+	<meta property="og:description" content="Curriculum Vitae de Elias Machuanin" />
+	<meta property="og:url" content="https://eliasmachuanin.github.io" />
+	<meta property="og:site_name" content="CV Machuanin" />
+	<meta property="og:image" content="https://eliasmachuanin.github.io/images/eliasMachuanin.jpg" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<title>Elias Machuanin</title>
 </head>
