--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="google-site-verification" content="7wi7YQo5y23ou2jyjVLQJzMXTGBe9GRwQ0NLRKUqSII" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="CV Machuanin, Elias" />
 	<meta property="og:description" content="Curriculum Vitae de Elias Machuanin" />
